[package]
name = "pe-tool"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["staticlib"]
[dependencies]
windows-sys={version="0.61.2",features=["Win32","Win32_System"
,"Win32_System_Diagnostics"
,"Win32_System_Diagnostics_Debug"
,"Win32_System_SystemServices"
,"Win32_System_Com"
,"Win32_Storage"
,"Win32_System_Memory"
,"Win32_Storage_FileSystem"
,"Win32_System_Threading"
,"Win32_Security"
,"Win32_System_SystemInformation"]}
pdb="0.8.0"
reqwest={version="0.12.24",features=["blocking"]}
